WIP: v1.2.1 for MC 1.19.2 Forge